# rhea

./: .editorconfig  .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS  HOWTO_GIT.md  INSTALL  Makefile.am  Makefile.rhea.pre.in  NEWS  README  README.md  bootstrap  configure.ac  configure_arch_anvil_gnu  configure_arch_bebop  configure_arch_centos  configure_arch_frontera  configure_arch_mac  configure_arch_mac_Hu  configure_arch_mac_Rudi  configure_arch_stampede2  singularity.def  submodule_init  tags_create
example/: Makefile.am  slabs.tgz
example/Slabweakzone_Split/: slabweakzone.c  slabweakzone.h  slabweakzone_postp.c  slabweakzone_test.c  slabweakzone_test.h
example/Slabweakzone_Split2/: slabweakzone.c  slabweakzone_TI.c  slabweakzone_options.c  slabweakzone_output.c  slabweakzone_poly2.c  slabweakzone_postp.c  slabweakzone_stress.c  slabweakzone_surface.c  slabweakzone_temperature.c  slabweakzone_test.c  slabweakzone_velbc.c  slabweakzone_viscosity.c  slabweakzone_weakzone.c
example/adjoint/: Makefile.am  adjoint.c  adjoint_adjoint.c  adjoint_adjoint.h  adjoint_essential.c  adjoint_essential.h  adjoint_geometry.h  adjoint_io.c  adjoint_math.c  adjoint_math.h  adjoint_options.c  adjoint_options.h  adjoint_physics.c  adjoint_physics.h  adjoint_postp.c  adjoint_test.c  adjoint_vtk.c  adjoint_vtk.h
example/adjoint_horizV/: adjoint.c  adjoint.h  adjoint_TI.c  adjoint_TI.h  adjoint_adjoint.c  adjoint_essential.c  adjoint_geometry.c  adjoint_io.h  adjoint_options.h  adjoint_postp.h  adjoint_test.h  adjoint_vtk.c
example/amr/: .amr.c.swp  Makefile.am  amr.c  options.ini  options_box_spherical.ini  options_cube_spherical.ini
example/basic/: Makefile.am  basic.c  options.ini  solver.petsc
example/basic_inversion/: Makefile.am  basic_inversion.c  options.ini  options_lin_stokes.ini  options_nl_stokes.ini
example/collide/: Makefile.am  collide.c  options.ini
example/earth/: Makefile.am  earth.c  earth_bc1_L15_k2_schur1_bfbt3.ini  options.ini  options_debug.ini  options_sphere_2plates.ini  options_weak100km.ini  options_weak20km.ini  solver.petsc
example/earth/stampede2/: process_output.sh  run.queue.sh  run_earth_weak100km.knl.queue.sh  run_earth_weak100km.queue.sh  run_earth_weak100km.skx.queue.sh  run_earth_weak20km.knl.queue.sh  run_earth_weak20km.skx.queue.sh  transfer_output.sh
example/earth_inversion/: Makefile.am  earth_inversion.c  options_weak100km.ini
example/io/: Makefile.am  io.c  options.ini  options_earth.ini  options_pacific_xsection.ini
example/newton_polynomial/: Makefile.am  newton_polynomial.c  newton_polynomial_base.c  newton_polynomial_base.h  newton_polynomial_meshfree.c  options.ini  options_meshfree.ini
example/pacific_xsection_inversion/: Makefile.am  options_weak100km.ini  options_weak20km.ini  options_weak50km.ini  pacific_xsection_inversion.c
example/pacific_xsection_inversion/data_processing/: plot_iterations.py  plot_posterior.py  plot_posterior_qoi_stress.py  plot_velocities.py  plot_velocities_batch.sh  posterior_util.py
example/share/: Makefile.am  catalyst_gridwriter.py  example_share_io.c  example_share_io.h  example_share_mesh.c  example_share_mesh.h  example_share_stokes.c  example_share_stokes.h  example_share_vtk.c  example_share_vtk.h  run_stampede2_knl_dev.sh  solver.petsc
example/sinker/: Makefile.am  options.ini  sinker.c  solver.petsc
example/slabs/: Makefile.am  check_temperature_data.py  check_weakzone_data.py  memcheck_suppress.vg  nanoflann.hh  options_brick.ini  options_cube.ini  options_shell.ini  options_slabs_perf_test.ini  options_slice.ini  profile_custom.tau  slabs.c  slabs_base.c  slabs_base.h  slabs_discretization.c  slabs_discretization.h  slabs_discretization_extended.h  slabs_io.c  slabs_io.h  slabs_linear_stokes_problem.c  slabs_linear_stokes_problem.h  slabs_nonlinear_stokes_problem.c  slabs_nonlinear_stokes_problem.h  slabs_norm.c  slabs_norm.h  slabs_perf_matvec.c  slabs_physics.c  slabs_physics.h  slabs_physics_extended.h  slabs_setup.c  slabs_setup.h  slabs_stokes_state.c  slabs_stokes_state.h  slabs_vtk.c  slabs_vtk.h  solver_bbt_amg.petsc  solver_bbt_cnode_gmg.petsc  solver_bbt_gmg.petsc  solver_bbt_stiff.petsc  solver_stokes_amg.petsc  (+11 more)
example/slabs/bgq/: cube_P16_7000elementspp_k2_Aonly.ini  cube_P16_7000elementspp_k2_Aonly.petsc  cube_P16_7000elementspp_k2_stokes.ini  cube_P16_7000elementspp_k2_stokes.petsc  earth_weak20km_1e-5_iAMRtol1e-3_k2_Aonly_P4K.ini  (+5 more)
example/slabtest/: Makefile.am  slabtest.c  slabtest_options.c  slabtest_options.h  slabtest_stress.c  slabtest_stress.h
example/slabweakzone/: Makefile.am  collide.c  slabweakzone.c  slabweakzone_copy.c
example/sphere_inversion/: Makefile.am  generate_plate_vertices.py  options_lin_stokes.ini  options_nl_stokes.ini  sphere_inversion.c
example/subduction/: Makefile.am  solver.petsc  subduction.c  subduction.h  subduction_TI.c  subduction_TI.h  subduction_adjoint.c  subduction_adjoint.h  subduction_essential.c  subduction_essential.h  subduction_geometry.c  subduction_geometry.h  subduction_io.c  subduction_io.h  subduction_options.c  subduction_options.h  subduction_physics.c  subduction_physics.h  subduction_postp.c  subduction_postp.h  subduction_test.c  subduction_test.h  subduction_vtk.c  subduction_vtk.h
example/yielding/: Makefile.am  options.ini  yielding.c
src/: Makefile.am  rhea.c  rhea.h  rhea_amr.c  rhea_amr.h  rhea_base.c  rhea_base.h  rhea_composition.c  rhea_composition.h  rhea_discretization.c  rhea_discretization.h  rhea_domain.c  rhea_domain.h  rhea_domain_subset.c  rhea_domain_subset.h  rhea_error_stats.c  rhea_error_stats.h  rhea_inversion.c  rhea_inversion.h  rhea_inversion_obs_stress.c  rhea_inversion_obs_stress.h  rhea_inversion_obs_velocity.c  rhea_inversion_obs_velocity.h  rhea_inversion_obs_viscosity.c  rhea_inversion_obs_viscosity.h  rhea_inversion_param.c  rhea_inversion_param.h  rhea_inversion_qoi.c  rhea_inversion_qoi.h  rhea_io_mpi.c  rhea_io_mpi.h  rhea_io_std.c  rhea_io_std.h  rhea_math.c  rhea_math.h  rhea_newton.c  rhea_newton.h  rhea_newton_check.c  rhea_newton_check.h  rhea_plate.c  (+42 more)
(+195 files in other folders)
