
# This file is part of rhea.
# Makefile.am in example
# Included non-recursively from toplevel directory.

# shared functionality for other examples
include example/share/Makefile.am

# examples created by Johann Rudi
include example/amr/Makefile.am
include example/basic/Makefile.am
include example/earth/Makefile.am
include example/io/Makefile.am
include example/newton_polynomial/Makefile.am
include example/yielding/Makefile.am

# examples created by Xi Liu
include example/collide/Makefile.am
include example/slabweakzone/Makefile.am
include example/subduction/Makefile.am
include example/adjoint/Makefile.am
